--- a/code_snippets.adoc
+++ b/code_snippets.adoc
@@ -34,4 +34,4 @@ By looking at what is handled by overlay 6, it is clear that the error has somet
 == Reading the output
 
 When checking the frequency calculation for the first normal mode, search for `normal co`.
-When checking for excited states, search for "Excited State" and you will find the first.
+When checking for excited states, search for `Excited State` and you will find the first.
