--- a/code_snippets.adoc
+++ b/code_snippets.adoc
@@ -37,3 +37,17 @@ In my case, it was the combination of nboread and npa together as `pop=(nobread,
 
 When checking the frequency calculation for the first normal mode, search for `normal co`.
 When checking for excited states, search for `Excited State` and you will find the first.
+
+== Adding weights to the TD-DFT output
+
+.Taking a TD-DFT output file from Gaussian, vertical.log, and use awk to add weights to the MO pairs that are above 8% weight (`2*$4*$4 >= 0.08`) for a closed shell calculation
+[source]
+--
+grep 'Excited State\|->\|<-' vertical.log | sed 's/://g' |awk '{if ($1 != "Excited" && 2*$4*$4 >= 0.08) print $1," -> ",$3,"   ", 200*$4*$4; else if ($1 == "Excited") print $0}'
+--
+
+.The same as above but specifying hole orbitals to be MO Nr 205 to 207 and electron orbitals to be (210, 211, 213--215) to find specific excitations
+[source]
+--
+grep 'Excited State\|->\|<-' vertical.log | sed 's/://g' |awk '{if ($1 != "Excited" && 2*$4*$4 >= 0.08 && ($1 == 205 || $1 == 206 || $1 == 207) && ($3 == 210 || $3 == 211 || $3 == 213 || $3 == 214 || $3 == 215)) print $1, $2, $3, "   ", 200*$4*$4; else if ($1 == "Excited") print $0}'
+--
